Box Model Completed

--- a/CSS Box Model/index.html
+++ b/CSS Box Model/index.html
@@ -26,6 +26,15 @@
             border: solid black 3px;
             border-radius: 5px;
             width: 190px;
+            /* padding: 50px;
+            margin: 30px; */
+            /* padding-left: 10px;
+            padding-top: 20px;
+            padding-right: 30px;
+            padding-bottom: 50px; */
+            padding: 10px 10px 10px 10px;
+            /* margin-right: 60px; */
+
         }
 
         .sec {
@@ -33,6 +42,7 @@
             border: solid black 3px;
             border-radius: 5px;
             width: 190px;
+
         }
 
         .third {
@@ -41,7 +51,8 @@
             border-radius: 5px;
             width: 190px;
         }
-        span{
+
+        span {
             background-color: aquamarine;
             border: solid black 3px;
             border-radius: 5px;
@@ -52,8 +63,8 @@
 </head>
 
 <body>
-    <h1>Box Models</h1>
-    <span>Hello World!!!</span>
+    <!-- <h1>Box Models</h1>
+    <span>Hello World!!!</span> -->
     <p class="first">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum soluta mollitia nesciunt iure, aliquam nam
         aperiam, possimus quo, perspiciatis suscipit quod amet voluptatum ad ullam vitae libero! Enim nostrum
