Box Model Completed

--- a/CSS Box Model/index.html
+++ b/CSS Box Model/index.html
@@ -38,11 +38,12 @@
         }
 
         .sec {
+            margin-top: 50px;
             background-color: beige;
             border: solid black 3px;
             border-radius: 5px;
             width: 190px;
-
+            margin-bottom: 50px;
         }
 
         .third {
