Box Model Completed

--- a/CSS Box Model/index.html
+++ b/CSS Box Model/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        /* *{
+            margin: 0;
+            padding: 0;
+        } */
         h1 {
             background-color: aquamarine;
             /* border-style: solid;
@@ -22,6 +26,7 @@
         }
 
         .first {
+            box-sizing:border-box;
             background-color: blanchedalmond;
             border: solid black 3px;
             border-radius: 5px;
@@ -32,12 +37,13 @@
             padding-top: 20px;
             padding-right: 30px;
             padding-bottom: 50px; */
-            padding: 10px 10px 10px 10px;
+            /* padding: 10px 10px 10px 10px; */
             /* margin-right: 60px; */
 
         }
 
         .sec {
+            box-sizing: border-box;
             margin-top: 50px;
             background-color: beige;
             border: solid black 3px;
@@ -64,8 +70,8 @@
 </head>
 
 <body>
-    <!-- <h1>Box Models</h1>
-    <span>Hello World!!!</span> -->
+    <h1>Box Models</h1>
+    <span>Hello World!!!</span>
     <p class="first">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum soluta mollitia nesciunt iure, aliquam nam
         aperiam, possimus quo, perspiciatis suscipit quod amet voluptatum ad ullam vitae libero! Enim nostrum
